consolidating same company stock